--- a/shared/latex/tf-keras/tf.tex
+++ b/shared/latex/tf-keras/tf.tex
@@ -76,7 +76,7 @@
 \end{frame}
 
 \begin{frame}{Graphe de calcul}
-  Conversion du mode «~eager~» au mode graphe par \texttt{tf.function}. Permet :
+  Conversion du mode \textit{eager} au mode graphe par \texttt{tf.function}. Permet :
 
   \begin{itemize}[<+->]
     \item L'optimisation du graphe des opérations
