--- a/shared/latex/tools/ml-dl.tex
+++ b/shared/latex/tools/ml-dl.tex
@@ -36,6 +36,6 @@
 \begin{frame}{Deep Learning pour les graphes}
   \begin{itemize}[<+->]
     \item \bluelink{https://www.dgl.ai/}{DGL}
-    \item \bluelink{https://github.com/deepmind/graph_nets}{Graph Nets}
+    \item \bluelink{https://pytorch-geometric.readthedocs.io/en/latest/}{PyG}
   \end{itemize}
 \end{frame}
