--- a/shared/latex/nn/gradient-descent.tex
+++ b/shared/latex/nn/gradient-descent.tex
@@ -21,13 +21,15 @@
 \begin{frame}{Algorithme}
   \begin{enumerate}[<+->]
     \item Initialisation aléatoire du modèle
-    \item Tant qu'aucun critère d'arrêt n'est satisfait~:
+    \item Pour $n$ itérations~:
       \begin{itemize}
-        \item Selection aléatoire d'un \textbf{batch} de données
-        \item \textbf{Forward} : Passe avant du \textbf{batch} dans le modèle
-        \item Calcul de l'erreur par rapport aux sorties attendues
-        \item \textbf{Backward} : Rétropropagation du gradient de l'erreur en fonction des paramètres dans le modèle (mise à jour du modèle)
-        \item Calcul des critères d'arrêt
+        \item Pour $b$ batchs~:
+        \begin{itemize}
+          \item \textbf{Forward}~: Passe avant du \textbf{batch} dans le modèle
+          \item Calcul de l'erreur par rapport aux sorties attendues
+          \item \textbf{Backward}~: Rétropropagation du gradient de l'erreur en fonction des paramètres dans le modèle (mise à jour du modèle)
+          \item Vérification des critères d'arrêt
+        \end{itemize}
       \end{itemize}
   \end{enumerate}
 \end{frame}
