--- a/shared/latex/supervised/classification.tex
+++ b/shared/latex/supervised/classification.tex
@@ -1,20 +1,16 @@
-\begin{frame}
-  \frametitle{Classification}
+\begin{frame}{Classification}
   \V{["tikz/variables", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Classification}
+\begin{frame}{Classification}
   \V{["img/mnist", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Classification}
+\begin{frame}{Classification}
   \V{["img/caltech256", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Classification}
+\begin{frame}{Classification}
   $\approx$ Distance entre la sortie et la cible ?
   \newline
   \newline
@@ -37,8 +33,7 @@
   \end{tabular}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Classification}
+\begin{frame}{Classification}
   Critère de l'erreur absolue (MAE) = 0.12
   \newline
   \newline
@@ -62,8 +57,7 @@
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Classification}
+\begin{frame}{Classification}
   Critère de l'erreur absolue (MAE) = 0.12
   \newline
   \newline
@@ -87,16 +81,12 @@
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Classification}
-  $\Rightarrow$ entropie croisée entre la sortie et la cible : 
+\begin{frame}{Classification}
+  Entropie croisée entre la sortie et la cible :
   \[
-    \mathrm{H}(p,q)=-\sum_{x}p(x)\log q(x)
+    \mathrm{H}(y, \hat{y})=-\sum_{i} y_i \log \hat{y}_i
   \]
 
-  \begin{itemize}[<+->]
-    \item minimale quand sortie = cible
-    \item prend en compte la distribution de la sortie
-  \end{itemize}
+  $\Rightarrow$ Minimale quand sortie = cible
     
 \end{frame}
