Add approx video to NN intro
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/intro.tex
+++ b/shared/latex/nn/intro.tex
@@ -52,6 +52,8 @@
 \begin{frame}{Un potentiel infini}
   \textbf{Kurt Hornik, 1991~:} Théorème d'approximation universelle
   \V{["tikz/activations/approximation", "tw", 1] | image}
+
+  \bluelink{https://youtu.be/5oEBiico-I4}{Illustration d'une approximation}
 \end{frame}
 
 \begin{frame}{Modélisation matricielle --- Échantillon}
