--- a/shared/latex/ai/intro.tex
+++ b/shared/latex/ai/intro.tex
@@ -1,114 +1,46 @@
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
+\begin{frame}{Un terme ambigu}
   \begin{center}
-    \huge{\red{INTELLIGENCE ?}}
+    \huge{Intelligence}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \V{["img/larousse", "twl", 0.2] | image}
-  \underline{\textbf{Intelligence}} :
-  \begin{itemize}
-  \item Ensemble des fonctions mentales ayant pour objet la connaissance conceptuelle et rationnelle
-  \item Aptitude d'un être humain à s'adapter à une situation, à choisir des moyens d'action en fonction des circonstances
-  \end{itemize}
-  \pause
+\begin{frame}{Étudions deux des définitions de l'intelligence}
+  \epigraph{%
+    \begin{enumerate}
+      \item Ensemble des fonctions mentales ayant pour objet la connaissance conceptuelle et rationnelle.
+      \item Aptitude d'un être humain à s'adapter à une situation, à choisir des moyens d'action en fonction des circonstances.
+    \end{enumerate}%
+  }{Larousse}
+
+  Qu'en est-il de l'intelligence collective~? Émotionnelle~? Animale~?
+
+  Comment appliquer ces définitions pour écrire des programmes les implémentant ?
+\end{frame}
+
+\begin{frame}{Reformulation limitée pour l'intelligence artificielle}
   \begin{center}
-    \red{intelligence animale ? intelligence collective ?}
+    Situation $\Rightarrow$ \green{\underline{décision}} $\Leftarrow$ Optimisation d'une récompense
   \end{center}
-\end{frame}
 
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \underline{\textbf{Intelligence}} :
-  \newline
-  \newline
-  \begin{center}
-    Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
-    \pause
-    \newline
-    \newline
-    \red{Quelles caractéristiques indispensables ?}
-  \end{center}
-\end{frame}
+  Quelques éléments nécessaires pour y parvenir~:
 
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \V{["img/memoire-fun", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \underline{\textbf{Intelligence}} :
-  \newline
-  \newline
-  Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
-  \newline
-  \newline
-  grâce à :
-  \begin{itemize}
-  \item \green{la mémoire}
+  \begin{itemize}[<+->]
+    \item mémoire
+    \item conceptualisation
+    \item prévision
+    \item curiosité
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \V{["img/conceptualisation", "th", 0.6] | image}
-\end{frame}
+\begin{frame}{Avancement}
+  Consensus actuel~:
 
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \underline{\textbf{Intelligence}} :
-  \newline
-  \newline
-  Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
-  \newline
-  grâce à :
-  \begin{itemize}
-  \item la mémoire
-  \item \green{la conceptualisation}
+  \begin{itemize}[<+->]
+    \item Tous les blocs de base nécessaires existent
+    \item Les combiner pour former un programme doté d'une intelligence forte prendra un temps inconnu
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \V{["img/foot-keeper-penalty", "tw", 0.8] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \underline{\textbf{Intelligence}} :
-  \newline
-  \newline
-  Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
-  \newline
-  grâce à :
-  \begin{itemize}
-  \item la mémoire
-  \item la conceptualisation
-  \item \green{la prédiction}
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \begin{center}
-    \huge{\red{INTELLIGENCE ARTIFICIELLE ?}}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \underline{\textbf{Intelligence Artificielle}} :
-  \newline
-  \newline
-  Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
-  \newline
-  grâce à :
-  \begin{itemize}
-  \item la mémoire
-  \item la conceptualisation
-  \item la prédiction
-  \end{itemize}
+\begin{frame}{Acception courante}
+  \emph{Intelligence artificielle} dénote un système qui implémente au moins un des mécanismes nécessaires à une intelligence artificielle forte.
 \end{frame}
