Improve AI history a bit
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/ai/history.tex
+++ b/shared/latex/ai/history.tex
@@ -1,5 +1,5 @@
 \begin{frame}{XVI\ieme{} --- Mythe du Golem}
-  \V{["img/mythe-du-golem", "tw", 1] | image}
+  \V{["img/golem", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{1913 --- Chaînes de Markov}
@@ -13,7 +13,7 @@
 \end{frame}
 
 \begin{frame}{1957 --- Perceptron de Rosenblatt}
-  \V{["img/perceptron", "tw", 1] | image}
+  \V{["tikz/neural-networks/perceptron", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{1972 --- TF-IDF}
