Make DPL sad for everyone but fmg
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/dpl/latex/about/description.tex
+++ b/orsys/dpl/latex/about/description.tex
@@ -3,9 +3,11 @@
   Cette formation présente les \textbf{fondamentaux} du \textbf{deep learning} à travers des travaux pratiques.
 \end{frame}
 
-\begin{frame}{Description}
-  \V{["img/deep-meme", "tw"] | image}
-\end{frame}
+\fmg{
+  \begin{frame}{Description}
+    \V{["img/deep-meme", "tw"] | image}
+  \end{frame}
+}
 
 \begin{frame}{Prérequis}
   \begin{itemize}
