Improve images in sectors/transport
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/intro.tex
+++ b/shared/latex/en/ml/intro.tex
@@ -51,12 +51,14 @@
 \begin{frame}{Reinforcement learning}
   Learn an efficient \textbf{policy} in a \textbf{world} where \textbf{actions} are \textbf{rewarded} (possibly negatively)
   \vfill
-  \begin{minipage}[l]{0.39\linewidth}
-    \V{["img/echec", "tw", 0.8] | image}
-  \end{minipage}
-  \begin{minipage}[l]{0.59\linewidth}
-    \V{["img/darpa-urban-challenge", "tw", 0.75] | image}
-  \end{minipage}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      \V{["img/chess", "tw", 0.9, "en"] | image}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \V{["img/darpa-2007", "tw", 0.9, "en"] | image}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Example --- Univariate linear regression}
