--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -51,12 +51,14 @@
 \begin{frame}{Apprentissage par Renforcement}
   Apprendre une stratégie efficace dans un univers où les actions fournissent des récompenses (possiblement négatives).
   \vfill
-  \begin{minipage}[l]{0.39\linewidth}
-    \V{["img/echec", "tw", 0.8] | image}
-  \end{minipage}
-  \begin{minipage}[l]{0.59\linewidth}
-    \V{["img/darpa-urban-challenge", "tw", 0.75] | image}
-  \end{minipage}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      \V{["img/chess", "tw", 0.9] | image}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \V{["img/darpa-2007", "tw", 0.9] | image}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire}
