--- a/shared/latex/sectors/transport.tex
+++ b/shared/latex/sectors/transport.tex
@@ -1,102 +1,87 @@
-\begin{frame}
-  \frametitle{La voiture autonome}
+\begin{frame}{Voiture autonome}
   \V{["img/voiture-autonome-conducteur", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  \begin{center}
-    Atouts : Peu de degrés de liberté
-    \newline
-    Inconvéniants : Hétérogénéité de l'environnement
-  \end{center}
-  \V{["img/voiture-autonome-navya", "tw", 1] | image}
+\begin{frame}{Voiture autonome ⋅ Caractéristiques}
+  \begin{description}
+    \item[Atouts] Peu de degrés de liberté
+    \item[Inconvéniants] Hétérogénéité de l'environnement
+  \end{description}
+  \V{["img/voiture-autonome-navya", "th", 0.5] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  Plusieurs niveaux d'autonomie (Society of Automotive Engineers) :
-  \begin{itemize}
-  \item[1:] Aide à la conduite (Régulateur de vitesse, freinage d'urgence, ...)
-  \item[2:] Automatisation partielle (Régulateur d'embouteillage, assistant de parking, ...)
-  \item[3:] Automatisation situationnelle avec surveillance humaine (pilote d'autoroute, parking automatique, ...)
-  \item[4:] Automatisation situationnelle sans surveillance humaine
-  \item[5:] Autonomie complète
-  \end{itemize}
+\begin{frame}{Voiture autonome ⋅ Hiérarchie}
+  Plusieurs niveaux d'autonomie (\textit{Society of Automotive Engineers})~:
+  \begin{description}
+    \item[1] Aide à la conduite (régulateur de vitesse, freinage d'urgence, …)
+    \item[2] Automatisation partielle (régulateur d'embouteillage, assistant de parking, …)
+    \item[3] Automatisation situationnelle avec surveillance humaine (pilote d'autoroute, parking automatique, …)
+    \item[4] Automatisation situationnelle sans surveillance humaine
+    \item[5] Autonomie complète
+  \end{description}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
+\begin{frame}{Voiture autonome ⋅ Capteurs}
   \V{["img/voiture-autonome", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  DARPA Grand Challenge (2004)
-  \newline
-  150 miles dans le désert du Nevada
-  \newline
-  Aucun gagnant !
-  \newline
-  5/23 arrivent au bout en 2005
-  \V{["img/darpa-grand-challenge", "tw", 0.6] | image}
+\begin{frame}{Voiture autonome ⋅ 2004 --- DARPA Grand Challenge}
+  150 miles ($\approx$ 240 km) dans le désert du Nevada. Aucun gagnant~!
+
+  5/23 arrivent au bout en 2005.
+
+  \V{["img/darpa-2005", "th", 0.5] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  DARPA Urban Challenge (2007)
-  \newline
-  60 miles en milieu urbain + respect du code de la route (sans gps)
-  \newline
-  6/35 franchissent la ligne d'arrivée
-  \V{["img/darpa-urban-challenge", "tw", 0.8] | image}
+\begin{frame}{Voiture autonome ⋅ 2007 --- DARPA Urban Challenge}
+  60 miles ($\approx$ 100 km) en milieu urbain + respect du code de la route (sans gps).
+
+  6/35 franchissent la ligne d'arrivée.
+
+  \V{["img/darpa-2007", "th", 0.5] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  Google Car (2010)
-  \newline
-  Projet visant une voiture autonome de niveau 5
-  \V{["img/google-car", "tw", 0.8] | image}
+\begin{frame}{Voiture autonome ⋅ 2010 --- Google Car}
+  Projet visant une voiture autonome de niveau 5.
+
+  \V{["img/google-car", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  Tesla Autopilot (2015)
-  \newline
-  Uniquement avec caméra, pas de LIDAR
-  \newline
+\begin{frame}{Voiture autonome ⋅ 2015 --- Tesla Autopilot}
+  Uniquement avec caméra, pas de LIDAR.
+
   \V{["img/tesla-autopilot", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  Waymo One déployé à Phenix (5 décembre 2018)
-  \V{["img/waymo-one", "tw", 0.8] | image}
+\begin{frame}{Voiture autonome ⋅ Fin 2018 --- Waymo One déployé à Phoenix}
+  \V{["img/waymo", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
-  6 accident mortels implicant des voitures autonomes (5 Tesla, 1 Uber)
-  \newline
-  Au 7 mai 2016 -2ème accident- Autopilot avait parcourus 210 Millions de kilomètres
-  \newline
-  1 seul (Uber) ou le pilote automatique est mis en cause
-  \V{["img/uber-crash-velo", "tw", 0.7] | image}
+\begin{frame}{Voiture autonome ⋅ Accidents}
+  \begin{columns}
+    \begin{column}{0.6\textwidth}
+      \begin{itemize}
+        \item 6 accident mortels implicant des voitures autonomes (5 Tesla, 1 Uber).
+        \item Au 7 mai 2016 ---~2ème accident~--- Autopilot avait parcouru 210 millions de kilomètres.
+        \item 1 seul (Uber) ou le pilote automatique est mis en cause.
+      \end{itemize}
+    \end{column}
+    \begin{column}{0.4\textwidth}
+      \V{["img/uber-crash", "tw", 1] | image}
+    \end{column}
+  \end{columns}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
+\begin{frame}{Voiture autonome ⋅ Acteurs}
   \V{["img/voiture-autonome-acteurs", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
-  \frametitle{La voiture autonome}
+  \frametitle{Voiture autonome ⋅ Impact}
   \V{["img/voiture-autonome-changements", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La voiture autonome}
+\begin{frame}{Automobile --- pas seulement la voiture autonome}
   L'IA pour les véhicules, pas uniquement de la conduite automatisée :
   \begin{itemize}
   \item Optimisation des trajets (Uber, Watson on Wheels, Waze)
@@ -104,13 +89,11 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Le monde du rail}
-  \V{["img/train-aiguillage", "tw", 0.8] | image}
+\begin{frame}{Transport ferroviaire}
+  \V{["img/railway", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Le monde du rail}
+\begin{frame}{Transport ferroviaire}
   \begin{itemize}
   \item Prévision de retard et replanification
   \item Conduite
@@ -121,7 +104,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{L'Aéronautique}
+  \frametitle{Aéronautique}
   \begin{minipage}[c]{0.49\linewidth}
     \begin{itemize}
     \item Production des pièces
