Make China pic conditional
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/actors/chine.tex
+++ b/shared/latex/actors/chine.tex
@@ -1,9 +1,10 @@
-\begin{frame}
-  \V{["img/chine-s-eveille", "tw", 1] | image}
-\end{frame}
+\fmg{
+  \begin{frame}
+    \V{["img/chine-s-eveille", "tw", 1] | image}
+  \end{frame}
+}
 
-\begin{frame}
-  \frametitle{Une hégémonie dans l'IA annoncée pour 2025}
+\begin{frame}{Une hégémonie dans l'IA annoncée pour 2025}
   \begin{itemize}
   \item Baidu, Alibaba et Tencent disposent de plus de données que les Etats-Unis et l’Europe réunis.
   \item 48\% des investissements mondiaux dans les startup en 2017
