Improve actors & IAP
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -1,5 +1,5 @@
 \begin{frame}{La recherche privée}
-  Les GAFA~:
+  Les GAFAM~:
 
   \begin{itemize}
   \item Google (+Deepmind)
@@ -23,32 +23,32 @@
   \V{["img/citation-nips-2005-2016-team", "th", 0.85] | image}
 \end{frame}
 
-\begin{frame}{Les acteurs business du machine learning}
+\begin{frame}{Acteurs business du machine learning}
   Course à l'acquisition~:
   \begin{description}
-    \item[Google] Cleversense (2012), Deepmind, Api.ai,...
-    \item[Apple] Siri (2010), Vocal IQ, RealFace, ...)
-    \item[Facebook] Face.com (2012), wit.ai, ...
+    \item[Google] Cleversense (2012), Deepmind (2014), Api.ai, …
+    \item[Apple] Siri (2010), Vocal IQ, RealFace, …)
+    \item[Facebook] Face.com (2012), wit.ai, …
     \item[Microsoft] Netbreeze (2013), Swiftkey, Maluuba
     \end{description}
 \end{frame}
 
-\begin{frame}{Les acteurs business}
+\begin{frame}{Acteurs business}
   IBM, Watson et Jeopardy en 2010
   \V{["img/jeopardy-watson", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- IBM Watson}
+\begin{frame}{Acteurs business --- IBM Watson}
   Survol de l'API~:
-  \begin{itemize}
-    \item Data : Watson Knowledge Catalog, Watson Discovery
-    \item Traitement de la voix : Tone Analyzer, Speech to Text
-    \item Traitement du texte : Text to Speech, , Language Translator, NLU, NLC
-    \item Machine Learning : Watson Studio, Knowledge Studio, Machine Learning
-  \end{itemize}
+  \begin{description}
+    \item[Data] Watson Knowledge Catalog, Watson Discovery
+    \item[Voix] Tone Analyzer, Speech to Text
+    \item[Langage] Text to Speech, Language Translator, NLU, NLC
+    \item[Machine Learning] Watson Studio, Knowledge Studio, Machine Learning
+  \end{description}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- IBM Watson}
+\begin{frame}{Acteurs business --- IBM Watson}
   Focus sur l'API de traitement de texte~:
   \begin{minipage}[c]{0.49\linewidth}
     \begin{itemize}
@@ -67,53 +67,53 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}{Les acteurs business --- Microsoft Azure}
-  \begin{itemize}
-    \item Voix : Reconnaissance vocale, Synthèse vocale, Traduction vocale, Reconnaissance de l'orateur
-    \item Langage : Analyse de texte, Language Understanding, Lecteur immersif, QnA maker, Traducteur
-    \item Vision : Form Recognizer, Video Indexer, Visage, Vision par ordinateur, Vision personnalisée
-    \item Data : Conseiller Métriques, Content Moderator, Personalizer
-  \end{itemize}
+\begin{frame}{Acteurs business --- Microsoft Azure}
+  \begin{description}
+    \item[Voix] Reconnaissance vocale, Synthèse vocale, Traduction vocale, Reconnaissance de l'orateur
+    \item[Langage] Analyse de texte, Language Understanding, Lecteur immersif, QnA maker, Traducteur
+    \item[Vision] Form Recognizer, Video Indexer, Visage, Vision par ordinateur, Vision personnalisée
+    \item[Data] Conseiller Métriques, Content Moderator, Personalizer
+  \end{description}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- Amazon AI}
-  \begin{itemize}
-    \item Data : AWS, Amazon Mechanical Turk
-    \item Traitement de la voix : Amazon Transcribe, Amazon Polly, 
-    \item Traitement du texte : Amazon Lex, Amazon Comprehend, Amazon Translate, Amazon Textract
-    \item Vision : Amazon Rekognition, AWS Panorama
-    \item Recherche d'information : Amazon Kendra
-    \item Business : Amazon Forecast, Amazon Fraud Detector
-  \end{itemize}
+\begin{frame}{Acteurs business --- Amazon AI}
+  \begin{description}
+    \item[Data] AWS, Amazon Mechanical Turk
+    \item[Voix] Amazon Transcribe, Amazon Polly
+    \item[Texte] Amazon Lex, Amazon Comprehend, Amazon Translate, Amazon Textract
+    \item[Vision] Amazon Rekognition, AWS Panorama
+    \item[Recherche d'information] Amazon Kendra
+    \item[Business] Amazon Forecast, Amazon Fraud Detector
+  \end{description}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- Facebook}
+\begin{frame}{Acteurs business --- Facebook}
   \begin{itemize}
   \item Bot framework
   \item DeepFace
-  \item Rosetta (Reco. text in video)
-  \item SapFix et Sapienz 
+  \item Rosetta (reconnaissance de texte dans des videos)
+  \item SapFix et Sapienz (correction automatique de code)
   \item Diverses APIs deep learning
-  \item Mise à dispo. de corpus et modèles (texte, voix, image, raisonnement,...)
+  \item Mise à disposition de corpus et modèles (texte, voix, image, raisonnement, …)
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- Google}
+\begin{frame}{Acteurs business --- Google}
   \begin{itemize}
   \item Traduction
-  \item Traitement d'image/Vidéo
+  \item Traitement d'image \& vidéo
   \item Voix
-  \item Agent conversationnel (\href{https://www.youtube.com/watch?v=d40jgFZ5hXk}{\blue{Démo}})
-  \item Robotique (boston dynamics)
-  \item Domotique (Google home)
+  \item Agent conversationnel (\bluelink{https://www.youtube.com/watch?v=d40jgFZ5hXk}{Démo})
+  \item Robotique (Boston Dynamics)
+  \item Domotique (Google Home)
   \item Santé (Google Health)
-  \item Renforcement (Go, Echec, Atari, Starcraft,...)
-  \item ...
-  \item Publications nombreuses avec dépots open source
+  \item Renforcement (go, échecs, jeux Atari, Starcraft, …)
+  \item …
+  \item Publications nombreuses avec dépôts open source
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- Baidu}
+\begin{frame}{Acteurs business --- Baidu}
   \begin{itemize}
   \item Traduction
   \item Traitement d'image/Vidéo
@@ -123,12 +123,12 @@
   \item Domotique
   \item Santé
   \item Renforcement
-  \item ...
-  \item De plus en plus de publications et dépots open-source
+  \item …
+  \item De plus en plus de publications et dépôts open-source
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Les acteurs business --- Apple}
+\begin{frame}{Acteurs business --- Apple}
   \begin{itemize}
   \item ???
   \item Première publication scientifique (publique) en 2016
