--- a/shared/latex/actors/chine.tex
+++ b/shared/latex/actors/chine.tex
@@ -4,12 +4,11 @@
   \end{frame}
 }
 
-\begin{frame}{Une hégémonie dans l'IA annoncée pour 2025}
+\begin{frame}{Leader futur dans l'IA}
   \begin{itemize}
-  \item Baidu, Alibaba et Tencent disposent de plus de données que les Etats-Unis et l’Europe réunis.
-  \item 48\% des investissements mondiaux dans les startup en 2017
-  \item Le nombre d'ingénieurs (1.2 million d'ingénieurs par an (10 fois la france))
-  \item Xi Jinping encourage toute initiative en IA
+    \item Baidu, Alibaba et Tencent disposent de plus de données que les États-Unis et l’Europe réunis.
+    \item 48\% des investissements mondiaux dans les startup en 2017
+    \item Le nombre d'ingénieurs (1,2 millions d'ingénieurs par an --- 10 fois la france)
+    \item Xi Jinping encourage toute initiative en IA
   \end{itemize}
 \end{frame}
-
