--- a/shared/latex/actors/startup.tex
+++ b/shared/latex/actors/startup.tex
@@ -1,47 +1,49 @@
-\begin{frame}
-  \frametitle{Tendance}
+\begin{frame}{Tendance}
   \V{["img/trends-ia-tektonik", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{World Map}
+\begin{frame}{Carte du monde --- 2018}
   \V{["img/ia-landscape-2018", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{French Map}
+\begin{frame}{Carte du monde --- 2021}
+  \V{["img/ia-landscape-2021", "tw", 1] | image}
+\end{frame}
+
+\begin{frame}{Carte de la France}
   \V{["img/ia-landscape-fr-2018-2", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Startups en France}
-  Top 10 :
-  \begin{itemize}
-  \item Algolia (moteur de recherche BtoB)
-  \item Sophia Genetics (Détecter des Mutations dans l'ADN)
-  \item Shift Technology (Détection de fraude à l'assurance)
-  \item Navya (Véhicules autonomes)
-  \item Prophesee (Traitement d'image)
-  \item Vulog (logiciel d'autopartage)
-  \item Tinyclues (Marketing predictif)
-  \item Linkfluence (Social media intelligence)
-  \item Teemo (``Criteo'' pour magasins physiques)
-  \item Vekia (Gestion de stocks et logistique)
-  \end{itemize}
+\begin{frame}{Startups en France --- Top 10}
+  \begin{description}
+    \item[Algolia] Moteur de recherche B2B
+    \item[Sophia Genetics]  Détection de mutations dans l'ADN
+    \item[Shift Technology]  Détection de fraude à l'assurance
+    \item[Navya] Véhicules autonomes
+    \item[Prophesee] Traitement d'image
+    \item[Vulog] Logiciel d'autopartage
+    \item[Tinyclues] Marketing prédictif
+    \item[Linkfluence] Social media intelligence
+    \item[Teemo] ``Criteo'' pour magasins physiques
+    \item[Vekia] Gestion de stocks et logistique
+  \end{description}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Startups en France}
-  La stratégie de recherche en IA en France :
+  \frametitle{Startups en France --- Stratégie de recherche IA}
   \begin{itemize}
-  \item 1.5 Millards d'euros sur 5 ans
-  \item 4 Institus interdisciplinaires (santé, environnement, énergie, transport et dévelppement des territoires) dirigés par l'INRIA
-  \item Attirer et garder les talents (doubler le nombre de doctorants + recrutement de chercheurs)
-  \item Soutien aux projets liés à l'IA (100 Millions d'euro)
-  \item Un supercalculateur dédié pour tous les chercheurs
-  \item 130 Millions d'euros pour des partenariat public-privé
-  \item Coopération avec l'Allemagne, l'Europe et le reste du monde
+    \item 1.5 millards d'euros sur 5 ans
+    \item 4 instituts interdisciplinaires dirigés par l'INRIA
+      \begin{itemize}
+        \item santé
+        \item environnement
+        \item énergie
+        \item transport et développement des territoires
+        \end{itemize}
+    \item Attirer et garder les talents (doubler le nombre de doctorants + recrutement de chercheurs)
+    \item Soutien aux projets liés à l'IA (100 millions d'euros)
+    \item Supercalculateur dédié pour tous les chercheurs
+    \item 130 millions d'euros pour des partenariats public-privé
+    \item Coopération avec l'Allemagne, l'Europe et le reste du monde
   \end{itemize}
 \end{frame}
-
-
