--- a/shared/latex/unsupervised/clustering/kmeans-gaussian.tex
+++ b/shared/latex/unsupervised/clustering/kmeans-gaussian.tex
@@ -14,13 +14,11 @@
   \end{itemize}  
 \end{frame}
 
-\begin{frame}
-  \frametitle{K-Means --- Exemple}
+\begin{frame}{K-Means --- Exemple}
   \bluelink{https://youtu.be/BVFG7fd1H30}{Vidéo de plusieurs apprentissages}
 \end{frame}
 
-\begin{frame}
-  \frametitle{K-Means --- Distance}
+\begin{frame}{K-Means --- Distance}
   distance euclidienne, Manhattan, Chebychev
   \V{["img/distances-euclidienne-manahattan-chebychev", "tw", 0.9] | image}
 \end{frame}
@@ -40,14 +38,12 @@
   \onslide<+->{$\rightarrow$ Bien meilleures propriétés de convergence~!}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Gaussian Mixture Model --- Introduction}
+\begin{frame}{Gaussian Mixture Model --- Introduction}
   Les clusters sont représentés par un centre et une matrice de covariance.
   \V{["img/gaussian-mixture", "tw", 0.7] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Gaussian Mixture Model --- Caractéristiques}
+\begin{frame}{Gaussian Mixture Model --- Caractéristiques}
   \begin{itemize}[<+->]
     \item \og{}Soft\fg{} clustering~: chaque cluster est une fonction de densité de probabilité
     \item Algorithme EM, souvent initialisé avec K-Means
