maj big-questions/ethics.tex

--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -93,3 +93,8 @@
   \bluelink{https://www.lemonde.fr/pixels/article/2019/11/24/on-a-essaye-de-fabriquer-un-deepfake-et-on-est-passe-a-autre-chose_6020323_4408996.html}{Source : ~Le Monde~, "Emmanuel Macron est OSS117"}
   \bluelink{https://www.reuters.com/article/uk-factcheck-trump-consession-video-deep/fact-check-donald-trump-concession-video-not-a-confirmed-deepfake-idUSKBN29G2NL}{Source : ~Reuters~, "Fact check: Donald Trump concession video not a ‘confirmed deepfake’"}
 \end{frame}
+
+\begin{frame}{Des solutions éthiques}
+  Deepfake :\\ 
+  Génération de génomes humains "crédibles" dans l'objectif d'augmenter les données sans passer par des donneurs.
+\end{frame}
