--- a/orsys/INTRA/2021-12-candriam/latex/evaluation-advanced.tex
+++ b/orsys/INTRA/2021-12-candriam/latex/evaluation-advanced.tex
@@ -135,6 +135,112 @@
   \end{columns}
 \end{frame}
 
+\begin{frame}{Scores de classement}
+  Les scores de classement (\emph{ranking}) fournissent une métrique d'évaluation pour comparer des modèles fournissant des prédictions avec un ensemble de réponses ordonné par leurs vraisemblances.
+  \vfill
+  \begin{table}
+    \centering
+    \begin{tabular}{c|c}
+      \toprule
+      Lettre & Réponses ordonnées\\
+      \midrule
+      F & 1.M 2.O 3.\textbf{G}\\
+      M & 1.\textbf{N} 2.Z 3.M\\
+      G & 1.A 2.\textbf{H} 3.E\\
+      \bottomrule
+    \end{tabular}
+    \caption{Trois réponses d'un modèle devant prédire la lettre suivante dans l'alphabet.}
+  \end{table}
+\end{frame}
+
+\begin{frame}{Rang réciproque moyen (MRR)}
+  Le rang réciproque moyen (\emph{Mean Reciprocal Rank}) calcule un score simple proportionné à l'ordre de prédiction de chaque réponse :
+  \begin{equation*}
+    MRR = \frac{1}{|Q|}\sum_{i=1}^{|Q|}\frac{1}{\text{rank}_i}
+  \end{equation*}
+\end{frame}
+
+\begin{frame}{Rang réciproque moyen (MRR)}
+  \begin{table}
+    \centering
+    \begin{tabular}{c|c|c|c}
+      \toprule
+      Lettre & Réponses ordonnées & Rang & Score de rang\\
+      \midrule
+      F & 1.M 2.O 3.\textbf{G} & 3 & $\frac{1}{3}$\\
+      M & 1.\textbf{N} 2.Z 3.M & 1 & $1$\\
+      G & 1.A 2.\textbf{H} 3.E & 2 & $\frac{1}{2}$\\
+      \bottomrule
+    \end{tabular}
+    \caption{Trois réponses d'un modèle devant prédire la lettre suivante dans l'alphabet.}
+  \end{table}
+  Score total moyen $= (\frac{1}{3}+1+\frac{1}{2})/3=\frac{11}{18}$.
+\end{frame}
+
+\begin{frame}{Précision pour $k$ (P@k)}
+  Lorsqu'il n'existe pas une réponse unique, mais un ensemble de réponses acceptables :
+  \begin{equation*}
+    P@ k = \frac{\text{Nb valeurs valides sur les k premières réponses}}{k}
+  \end{equation*}
+  Peut-être moyenné pour donnée un score.
+  \begin{table}
+    \centering
+    \begin{tabular}{c|c|c}
+      \toprule
+      Lettre & Réponses ordonnées & Score de rang\\
+      \midrule
+      F & 1.M 2.O 3.\textbf{G} & $0$\\
+      M & 1.\textbf{N} 2.Z 3.M & $\frac{1}{3}$\\
+      G & 1.\textbf{H} 2.\textbf{H} 3.E & $\frac{2}{3}$\\
+      \bottomrule
+    \end{tabular}
+    \caption{P@3}
+  \end{table}
+\end{frame}
+
+\begin{frame}{Gain cumulé (CG)}
+  Le gain cumulé suppose de calculer un score de pertinence sur chaque réponse donnée $pert$. Ce score peut-être une simple constante lorsque le résultat est valide.
+
+  En considérant les $k$ propositions :
+  \begin{equation*}
+    CG_k=\sum^k_{i=1} pert_i
+  \end{equation*}
+
+  Le gain cumulé ne prend en compte la position d'une réponse en fonction de sa pertinence.
+\end{frame}
+
+\begin{frame}{Gain cumulé réduit (DCG)}
+  Le gain cumulé réduit pénalise le score si les résultats les plus pertinents sont les moins bien classés.
+  \begin{equation*}
+    DCG_k=\sum^k_{i=1} \frac{pert_i}{\log_2(i+1)} 
+  \end{equation*}
+\end{frame}
+
+\begin{frame}{Gain cumulé réduit normalisé (nDCG)}
+  Lorsque le nombre de résultats n'est pas fixe il est possible de calculer la version normalisé de la DCG :
+  \begin{equation*}
+    nDCG_k=\frac{DCG_k}{IDCG_k}
+  \end{equation*}
+  où $IDCG_k$ correspond au score du meilleur classement possible.
+\end{frame}
+
+\begin{frame}{Autres mesures : Perplexité}
+  La \textbf{perplexité} mesure à quelle point un modèle est confiant dans la prédiction d'une séquence de taille $n$~:
+  \begin{equation*}
+    PP(w_1,\dots ,w_n) = \sqrt[n]{\frac{1}{\prod^n_{i=1}p(w_i)}}
+  \end{equation*}
+  ou sa version $\log$~:
+  \begin{equation*}
+    log\ PP(w_1,\dots ,w_n) = 2^{-\frac{1}{n}\sum_{i=1}^n \log_2\left(\frac{1}{p(w_i|w_0,\dots,w_{i-1})}\right)}
+  \end{equation*}
+
+  \begin{itemize}
+    \item Surtout utilisée en prédiction de texte.
+  \end{itemize}
+  
+
+\end{frame}
+
 \begin{frame}{Comparaisons de modèles}
 Selon la tache considérée, il peut être plus ou moins difficile d'évaluer les résultats fournis par les différentes métriques.
 
