Last modif candriam INTRA : AB testing + slice learning + MAB

--- a/orsys/INTRA/2021-12-candriam/latex/about/description.tex
+++ b/orsys/INTRA/2021-12-candriam/latex/about/description.tex
@@ -1,12 +1,12 @@
 
 \begin{frame}{Description}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
+  Cette formation présente les \textbf{fondamentaux} de l'\textbf{Apprentissage Automatique} à travers des travaux pratiques.
 \end{frame}
 
 \begin{frame}{Prérequis}
   \begin{itemize}
   \item Connaissances de base en algèbre et statistiques
-  \item Connaissances de base en python
+  \item Connaissances de base en python et des librairies \texttt{numpy} et \texttt{pandas}
   \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
