Use new plt stuff
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/learning.tex
+++ b/shared/latex/en/ml/learning.tex
@@ -11,7 +11,7 @@
 \begin{frame}{Fit scenarios}
   Several possibilities for a fit:
 
-  \V{["img/fit-nzmog-en", "tw", 1] | image}
+  \V{["plt/overfit-polynomial-en", "tw", 1] | image}
 
   \onslide<+(1)->{
     \begin{alertblock}{Warning}
