--- a/shared/latex/ml/learning.tex
+++ b/shared/latex/ml/learning.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Qualité de l'apprentissage}
   Entrainement supervisé d'un modèle — overfit
 
-  \V{["img/fit-nzmog", "tw", 1] | image}
+  \V{["plt/overfit-polynomial", "tw", 1] | image}
 
   \red{Problème : trop minimiser la perte n'est pas bon !}
 \end{frame}
