Transfer learning curve & early stopping from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/learning.tex
+++ b/shared/latex/en/ml/learning.tex
@@ -32,7 +32,7 @@
 
 \begin{frame}{Best fit}
 
-  \V{["img/learning-curve-nzmog-en", "th", 0.6] | image}
+  \V{["plt/learning-curve-en", "th", 0.6] | image}
 
   → Minimize error on the \textbf{validation} split
 \end{frame}
