--- a/shared/latex/en/nn/regularization.tex
+++ b/shared/latex/en/nn/regularization.tex
@@ -25,7 +25,7 @@
 \end{frame}
 
 \begin{frame}{Early stopping}
-  \V{["img/early-stopping-nzmog-en", "th", 0.7] | image}
+  \V{["plt/early-stopping-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Data augmentation}
