--- a/shared/latex/ml/learning.tex
+++ b/shared/latex/ml/learning.tex
@@ -8,7 +8,7 @@
 
 \begin{frame}{Qualité de l'apprentissage}
 
-  \V{["img/learning-curve-nzmog", "th", 0.6] | image}
+  \V{["plt/learning-curve", "th", 0.6] | image}
 
   → Minimiser la perte sur un ensemble de validation
 \end{frame}
