--- a/shared/latex/nn/regularisation.tex
+++ b/shared/latex/nn/regularisation.tex
@@ -20,7 +20,7 @@
 \end{frame}
 
 \begin{frame}{Par early stopping}
-  \V{["img/early-stopping-nzmog", "th", 0.7] | image}
+  \V{["plt/early-stopping", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Par augmentation/bruitage des données}
