Transfer bayesian mixture from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/bayesian/gaussian-mixture.tex
+++ b/shared/latex/bayesian/gaussian-mixture.tex
@@ -1,9 +1,7 @@
-\begin{frame}
-  \frametitle{Mixture de Gaussiennes}
-  \V{["img/gaussian-mixture-univariate-nzmog", "tw", 0.8] | image}
+\begin{frame}{Mixture de Gaussiennes}
+  \V{["plt/gaussian-mixture-univariate", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Mixture de Gaussiennes : Apprentissage}
-  Algorithme EM maximisant la probabilité à postériori des données.
+\begin{frame}{Mixture de Gaussiennes --- Apprentissage}
+  Algorithme EM maximisant la probabilité a posteriori des données.
 \end{frame}
