Transfer effort vs value plot from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/engineering/engineering-practices.tex
+++ b/shared/latex/engineering/engineering-practices.tex
@@ -3,7 +3,7 @@
 \end{frame}
 
 \begin{frame}{Complexification des solutions : retours dégressifs}
-  \V{["img/ml-effort-vs-value-nzmog", "th", 0.8] | image}
+  \V{["plt/ml-effort-vs-value", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Caractéristiques et buts différents}
